# kg-agent-quant

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml  pytest.ini  test_simple.py
config/: llm.json.example  llm.yaml
data/kg/: layer1_concepts.json  layer2_relations_final.json
data/sample/: factors_sample.json
docs/: ARCHITECTURE.md  qlib_operators.md
docs/api/: README.md
docs/guide/: README.md
examples/: 01_factor_generation.py  02_evaluation.py  03_complete_pipeline.py  04_llm_generation.py
src/kg_quant/: __init__.py  __main__.py  cli.py
src/kg_quant/core/: __init__.py  config.py  evaluator.py
src/kg_quant/evaluation/: metrics.py
src/kg_quant/factor/: __init__.py  ast_parser.py
src/kg_quant/kg/: __init__.py  consistency_checker.py  explainer.py  expression_evaluator.py  feature_generator.py  retriever.py  schema.py
src/kg_quant/llm/: __init__.py  config.py  generators.py
src/kg_quant/utils/: __init__.py  data.py  logger.py
tests/: __init__.py  test_evaluation.py  test_kg.py  test_kg_quant.py
